force-app/main/default/objects/Deal_Stage_Config__mdt/Deal_Stage_Config__mdt.object-meta.xml
<CustomObject>
    <label>Deal Stage Configuration</label>
    <pluralLabel>Deal Stage Configurations</pluralLabel>
</CustomObject>