force-app/main/default/objects/Deal_Stage_Config__mdt/fields/Default_Probability__c.field-meta.xml
<CustomField>
    <fullName>Default_Probability__c</fullName>
    <label>Default Probability</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>