force-app/main/default/objects/Deal_Stage_Config__mdt/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <label>Is Closed Stage</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>