force-app/main/default/objects/Deal_Stage_Config__mdt/fields/Requires_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Requires_Next_Step__c</fullName>
    <label>Requires Next Step</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>