force-app/main/default/objects/Deal_Stage_Config__mdt/fields/Stage_Color__c.field-meta.xml
<CustomField>
    <fullName>Stage_Color__c</fullName>
    <label>Stage Color</label>
    <type>Text</type>
    <length>20</length>
</CustomField>