force-app/main/default/objects/Deal_Stage_Config__mdt/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <label>Stage Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>